<resources>
    <string name="app_name">Inquis</string>
    <string name="text_addentry">Add Entry</string>
    <string name="text_home">Home</string>
    <string name="text_newentry">New Entry</string>
    <string name="text_journal">Journal</string>
    <string name="text_chart">Chart</string>
    <string name="text_feed">Feed</string>
    <string name="empty_entry">Loading...</string>
    <string name="entries">Recent Entries</string>
    <string name="questions">Daily Questions</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
